--- a/data_pre.ipynb
+++ b/data_pre.ipynb
@@ -38,11 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.tokenize import WhitespaceTokenizer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tokenize import sent_tokenize\n",
     "from nltk.stem import WordNetLemmatizer \n",
     "from nltk.corpus import stopwords"
    ]
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +624,7 @@
        "(4483, 2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -657,6 +658,264 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.1 Coverting transcription to lower case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(transcription):\n",
+    "    transcription_lower=lower_text(transcription)\n",
+    "    transcription_without_sign_punctuation_number=remove_sign_punctuation_and_numerical(transcription_lower)\n",
+    "    transcription_without_stop=remove_stop_words(transcription_without_sign_punctuation_number)\n",
+    "    transcription_lemmatized=lemmatizing_text(transcription_without_stop)\n",
+    "    return transcription_lemmatized\n",
+    "def lower_text(transcription ):\n",
+    "    text=transcription.lower()\n",
+    "    return text\n",
+    "def remove_sign_punctuation_and_numerical(transcription):\n",
+    "    text=transcription.translate(str.maketrans('','',string.punctuation))\n",
+    "    text_mod=''.join([x for x in text if not x.isdigit()])\n",
+    "    symbols = re.compile('[/(){\\}\\[\\]\\|@,;]')\n",
+    "    text_new=symbols.sub('',text_mod)\n",
+    "    return text_new\n",
+    "def remove_stop_words(transcription):\n",
+    "    stop_words=stopwords.words('english')\n",
+    "    words=\"\"\n",
+    "    transcription=str(transcription)\n",
+    "    text=sent_tokenize(transcription)\n",
+    "    for sentences in text:\n",
+    "        w=word_tokenize(sentences)\n",
+    "        for tokens in w:\n",
+    "            if(tokens not in stop_words):\n",
+    "                words=words+' '+tokens\n",
+    "    return words\n",
+    "    return transcription\n",
+    "def lemmatizing_text(transcription):\n",
+    "    words=[]\n",
+    "    lemmatizer=WordNetLemmatizer()\n",
+    "    transcription=str(transcription)\n",
+    "    text=sent_tokenize(transcription)\n",
+    "    for sentences in text:\n",
+    "        w=word_tokenize(sentences)\n",
+    "        for tokens in w:\n",
+    "            words.append(lemmatizer.lemmatize(tokens))\n",
+    "    return ' '.join(words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>medical_specialty</th>\n",
+       "      <th>transcription</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>2-D M-MODE: , ,1.  Left atrial enlargement wit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>1.  The left ventricular cavity size and wall ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>2-D ECHOCARDIOGRAM,Multiple views of the heart...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>DESCRIPTION:,1.  Normal cardiac chambers size....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>2-D STUDY,1. Mild aortic stenosis, widely calc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4972</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>INDICATION: , Chest pain.,TYPE OF TEST: , Aden...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4973</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>CHIEF COMPLAINT: , Chest pain.,HISTORY OF PRES...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4974</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>HISTORY OF PRESENT ILLNESS: , The patient is a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4975</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>HISTORY OF PRESENT ILLNESS: , Mr. ABC is a 60-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4976</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>REASON FOR CONSULTATION:  ,Abnormal echocardio...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4483 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               medical_specialty  \\\n",
+       "3     Cardiovascular / Pulmonary   \n",
+       "4     Cardiovascular / Pulmonary   \n",
+       "7     Cardiovascular / Pulmonary   \n",
+       "9     Cardiovascular / Pulmonary   \n",
+       "11    Cardiovascular / Pulmonary   \n",
+       "...                          ...   \n",
+       "4972  Cardiovascular / Pulmonary   \n",
+       "4973  Cardiovascular / Pulmonary   \n",
+       "4974  Cardiovascular / Pulmonary   \n",
+       "4975  Cardiovascular / Pulmonary   \n",
+       "4976  Cardiovascular / Pulmonary   \n",
+       "\n",
+       "                                          transcription  \n",
+       "3     2-D M-MODE: , ,1.  Left atrial enlargement wit...  \n",
+       "4     1.  The left ventricular cavity size and wall ...  \n",
+       "7     2-D ECHOCARDIOGRAM,Multiple views of the heart...  \n",
+       "9     DESCRIPTION:,1.  Normal cardiac chambers size....  \n",
+       "11    2-D STUDY,1. Mild aortic stenosis, widely calc...  \n",
+       "...                                                 ...  \n",
+       "4972  INDICATION: , Chest pain.,TYPE OF TEST: , Aden...  \n",
+       "4973  CHIEF COMPLAINT: , Chest pain.,HISTORY OF PRES...  \n",
+       "4974  HISTORY OF PRESENT ILLNESS: , The patient is a...  \n",
+       "4975  HISTORY OF PRESENT ILLNESS: , Mr. ABC is a 60-...  \n",
+       "4976  REASON FOR CONSULTATION:  ,Abnormal echocardio...  \n",
+       "\n",
+       "[4483 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['transcription']=df['transcription'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_colwidth', 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>medical_specialty</th>\n",
+       "      <th>transcription</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cardiovascular / Pulmonary</td>\n",
+       "      <td>mmode left atrial enlargement left atrial diameter cm normal size right left ventricle normal lv systolic function left ventricular ejection fraction normal lv diastolic function pericardial effusion normal morphology aortic valve mitral valve tricusp...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            medical_specialty  \\\n",
+       "3  Cardiovascular / Pulmonary   \n",
+       "\n",
+       "                                                                                                                                                                                                                                                    transcription  \n",
+       "3  mmode left atrial enlargement left atrial diameter cm normal size right left ventricle normal lv systolic function left ventricular ejection fraction normal lv diastolic function pericardial effusion normal morphology aortic valve mitral valve tricusp...  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(1)"
    ]
   }
  ],
