--- a/data_pre.ipynb
+++ b/data_pre.ipynb
@@ -26,17 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.manifold import TSNE\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.manifold import TSNE"
    ]
   },
   {
